Changing the sponsors (Removing herbet, adding Christmas Pagoda)

--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -72,35 +72,15 @@
                         <div class="dashboard-partner-main-title"><h1>If you like Bantopia check out these servers and websites!</h1></div>
                         <div class="dashboard-partner-group">
                             <div class="dashboard-partner-title">
-                                <h2><span class="color-RE">{</span>American Chill Spot<span class="color-RE">}</span></h2>
-                            </div>
-                            <div class="dashboard-partner">
-                                <p>We are a discord for Conservatives made by Conservatives a chill spot for supporters of Free Speech, The 2nd amendment, USA and Capitalism. a laid back community with a right wing lean we are welcoming to all but expect a debate if you're on the other side. Come hang out, kick your feet up and join The American Chill Spot.<br><br>
-                                   <a href="https://discord.gg/75ywtZ3K8f" class="dashboard-partner-link">https://discord.gg/75ywtZ3K8f</a>
-                                   <br>
-                                   <br>
-                                   What we offer:<br>
-                                   | A chill spot for likeminded individuals <br>
-                                   | A chill staff team here to help<br>
-                                   | Over 200 emotes, and counting....<br>
-                                   | Debate channel to settle disagreements<br>
-                                   | Religion channel for the faithful <br>
-                                   | Voice & Music channels<br>
-                                   | And many more dedicated channels. <br>
-                                   </p>
-                            </div>
-                        </div>
-                        <div class="dashboard-partner-group">
-                            <div class="dashboard-partner-title">
-                                <h2><span class="color-BL">{</span>Herbert's Club<span class="color-BL">}</span></h2>
+                                <h2><span class="color-BL">{</span>Christmas Pagoda<span class="color-BL">}</span></h2>
                             </div>
                             <div class="dashboard-partner">
                                 <p>
-                                Are you someone who enjoys thoughtful political debate with others who share your thirst for knowledge?<br>
+                                Are you someone who enjoys thoughtful discussion and chilling with other down to earth people?<br><br>
                                 🏛️   If you need a community to let out your craziest opinions, or you just want to find some like-minded poeple, look no further!. 🏛️<br>
                                 🎉  Have fun, be civil and enjoy the ride! 🎉<br><br>
-                                Join the Herbert's Club today - a new chill kind of Discord discussion server.<br>
-                                <a href="https://discord.com/invite/y3czv7W8vr" class="dashboard-partner-link">https://discord.com/invite/y3czv7W8vr</a>
+                                <a href="https://discord.com/invite/y3czv7W8vr" class="dashboard-partner-link">https://discord.gg/TEKegddkBm</a><br><br>
+                                Join the Christmas Pagoda today - a new chill kind of Discord discussion server.<br>
                                 </p>
                             </div>
                         </div>
@@ -128,6 +108,26 @@
                                     <br>
                                     <a class="dashboard-partner-link" href="https://discord.gg/drBx5bGtGx">https://discord.gg/drBx5bGtGx</a>
                                 </p>
+                            </div>
+                        </div>
+                        <div class="dashboard-partner-group">
+                            <div class="dashboard-partner-title">
+                                <h2><span class="color-RE">{</span>American Chill Spot<span class="color-RE">}</span></h2>
+                            </div>
+                            <div class="dashboard-partner">
+                                <p>We are a discord for Conservatives made by Conservatives a chill spot for supporters of Free Speech, The 2nd amendment, USA and Capitalism. a laid back community with a right wing lean we are welcoming to all but expect a debate if you're on the other side. Come hang out, kick your feet up and join The American Chill Spot.<br><br>
+                                   <a href="https://discord.gg/75ywtZ3K8f" class="dashboard-partner-link">https://discord.gg/75ywtZ3K8f</a>
+                                   <br>
+                                   <br>
+                                   What we offer:<br>
+                                   | A chill spot for likeminded individuals <br>
+                                   | A chill staff team here to help<br>
+                                   | Over 200 emotes, and counting....<br>
+                                   | Debate channel to settle disagreements<br>
+                                   | Religion channel for the faithful <br>
+                                   | Voice & Music channels<br>
+                                   | And many more dedicated channels. <br>
+                                   </p>
                             </div>
                         </div>
                     </div>
