Adding Fort Liberty Ad, Fixing Christmas Ad and Removing ChillSpot Ad.

--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -76,11 +76,29 @@
                             </div>
                             <div class="dashboard-partner">
                                 <p>
-                                Are you someone who enjoys thoughtful discussion and chilling with other down to earth people?<br><br>
+                                Are you someone who enjoys thoughtful discussion and chilling with other down to earth people?<br><br>3
                                 🏛️   If you need a community to let out your craziest opinions, or you just want to find some like-minded poeple, look no further!. 🏛️<br>
                                 🎉  Have fun, be civil and enjoy the ride! 🎉<br><br>
-                                <a href="https://discord.com/invite/y3czv7W8vr" class="dashboard-partner-link">https://discord.gg/TEKegddkBm</a><br><br>
+                                <a href="https://discord.gg/TEKegddkBm" class="dashboard-partner-link">https://discord.gg/TEKegddkBm</a><br><br>
                                 Join the Christmas Pagoda today - a new chill kind of Discord discussion server.<br>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="dashboard-partner-group">
+                            <div class="dashboard-partner-title">
+                                <h2><span class="color-RE">{</span>⭐ Fort Liberty<span class="color-RE">}</span></h2>
+                            </div>
+                            <div class="dashboard-partner">
+                                <p>
+                                Founded in June of 2022, Operation Valiant Front (OVF) Formerly known as The Enlightenment Project, is a Super-PAC registered with the Federal Elections Commissions, based here in Texas. <br><br>
+                                It is a Conservative-Christian based Political Action Committee with a goal to encourage young Americans to return to Christian Conservative principles and get involved in local or higher 
+                                forms of society and government. <br><br> 
+                                We do this through many initiatives; businesses, charities, content, entertainment, and unfiltered journalism. Our Discord server is a public platform for our 
+                                members to meet, connect and have a good time!<br><br>
+
+                                "Together, We are empowering America through Christ!"<br><br>
+                                <a class="dashboard-partner-link" href="https://discord.gg/urEyxwFJgP">https://discord.gg/urEyxwFJgP</a>
+                                <br>
                                 </p>
                             </div>
                         </div>
@@ -108,26 +126,6 @@
                                     <br>
                                     <a class="dashboard-partner-link" href="https://discord.gg/drBx5bGtGx">https://discord.gg/drBx5bGtGx</a>
                                 </p>
-                            </div>
-                        </div>
-                        <div class="dashboard-partner-group">
-                            <div class="dashboard-partner-title">
-                                <h2><span class="color-RE">{</span>American Chill Spot<span class="color-RE">}</span></h2>
-                            </div>
-                            <div class="dashboard-partner">
-                                <p>We are a discord for Conservatives made by Conservatives a chill spot for supporters of Free Speech, The 2nd amendment, USA and Capitalism. a laid back community with a right wing lean we are welcoming to all but expect a debate if you're on the other side. Come hang out, kick your feet up and join The American Chill Spot.<br><br>
-                                   <a href="https://discord.gg/75ywtZ3K8f" class="dashboard-partner-link">https://discord.gg/75ywtZ3K8f</a>
-                                   <br>
-                                   <br>
-                                   What we offer:<br>
-                                   | A chill spot for likeminded individuals <br>
-                                   | A chill staff team here to help<br>
-                                   | Over 200 emotes, and counting....<br>
-                                   | Debate channel to settle disagreements<br>
-                                   | Religion channel for the faithful <br>
-                                   | Voice & Music channels<br>
-                                   | And many more dedicated channels. <br>
-                                   </p>
                             </div>
                         </div>
                     </div>
