--- a/templates/profile/dashboard.html
+++ b/templates/profile/dashboard.html
@@ -131,6 +131,13 @@
                     </div>
                     <div id="dashboard-patch-notes" class="hidden">
                         <div class="dashboard-patch">
+                            <div class="dashboard-patch-title">3.0.1 Patch Notes</div>
+                            <ul class="dashboard-notes">
+                                <li>Mobile posting screen looks more aesthetic.</li>
+                                <li>It's now easier to post.</li>
+                            </ul>
+                        </div>
+                        <div class="dashboard-patch">
                             <div class="dashboard-patch-title">3.0.0 Patch Notes [The Confirmation Update]</div>
                             <ul class="dashboard-notes">
                                 <li>Top Statistics have been added to every post! The Last Activity Stat, the typing indicator stat and the message recoil bar.</li>
