--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -788,6 +788,7 @@ input:focus:-ms-input-placeholder {
 
     .post-input input {
         flex: 1;
+        box-sizing: border-box;
     }
 
     .char-label {
